--- a/templates/block/block--field-block--node--basic-page--title.html.twig
+++ b/templates/block/block--field-block--node--basic-page--title.html.twig
@@ -35,7 +35,7 @@
   {{ title_suffix }}
   {% block content %}
     {% if not is_front %}
-      <div class="container ucb-page-title">
+      <div class="container ucb-page-title bs-background-unstyled">
         <div aria-hidden="true" class="h1">
           {{ content }}
         </div>
