Newsletter: Dark mode overrides

--- a/templates/content/node--newsletter--email-html.html.twig
+++ b/templates/content/node--newsletter--email-html.html.twig
@@ -122,6 +122,9 @@
 <div class="container" id="email-preview" style="background-color: grey; display: flex; justify-content:center">
     <html>
         <head>
+            {# This should force browsers to stop using DarkMode overrides #}
+            <meta name="color-scheme" content="light">
+            <meta name="supported-color-schemes" content="light">
             <style>
 
                 img{
