--- a/templates/paragraphs/paragraph--newsletter-section.html.twig
+++ b/templates/paragraphs/paragraph--newsletter-section.html.twig
@@ -34,6 +34,7 @@
 			{% endfor %}
 		{% endif %}
 		{% if paragraph.field_newsletter_section_style.value is same as("0") %}
+      <p>feature</p>
 			{% for key, item in paragraph.field_newsletter_section_select %}
 				{%  if key|first != '#' %}
 					<div class="ucb-newsletter-section-article {{unpublishedClass}}">
@@ -110,22 +111,24 @@
 				{% for key, item in paragraph.field_newsletter_section_select %}
 					{%  if key|first != '#' %}
 						<div class="{{paragraph.field_newsletter_section_select|length > 1 ? 'col-lg-6' : '' }} col-12 pb-4">
-							<div
-							class="teaser-article-img px-2">
-							{# Code to render selected article content (thumbnail) #}
+              {# Code to render selected article content (thumbnail) #}
 							{% if item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.alt|render %}
+							  <div class="teaser-article-img px-2">
 								<img
 								src="{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.entity.fileuri|image_style('focal_image_square') }}" alt="{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.alt|render }}"/>
-
+              </div>
 								{# Code to render selected article content (!thumbnail) #}
 							{% elseif item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.alt|render %}
-								<img
+							<div class="teaser-article-img px-2">
+              <img
 								src="{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.entity.fileuri|image_style('focal_image_square') }}" alt="{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.alt|render }}"/>
-
+              </div>
 								{# Code to render user made content #}
 							{% elseif item.entity.field_newsletter_content_image.entity.field_media_image.alt|render %}
-								<img src="{{ item.entity.field_newsletter_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_square') }}" alt="{{ item.entity.field_newsletter_content_image.entity.field_media_image.alt|render }}"/>
-							{% endif %}
+							<div class="teaser-article-img px-2">
+              <img src="{{ item.entity.field_newsletter_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_square') }}" alt="{{ item.entity.field_newsletter_content_image.entity.field_media_image.alt|render }}"/>
+							</div>
+              {% endif %}
 						</div>
 
 							{# Code to render selected article title/url #}
@@ -179,11 +182,11 @@
 
 								{# Code to render user made content (content text) #}
 							{% elseif item.entity.field_newsletter_content_text.value|render %}
-								<div class="article-summary">
+								<div class="article-summary" id="teaser-article-summary-user-text--{{kkey}}">
 									{{ item.entity.field_newsletter_content_text|view }}
 								</div>
 							{% endif %}
-							
+
 						</div>
 					{% endif %}
 				{% endfor %}
